Fix UI jump in boost pop out

--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -753,9 +753,8 @@ body.layout-single-column {
 
 /* Improved UI for the new quote posts popper */
 div[data-popper-placement]:has(.reblog-button__item button:disabled)
-  .dropdown-menu {
-  left: 80px;
-  width: 180px;
+  .dropdown-menu > .dropdown-menu__container .reblog-button__item.disabled button > div {
+    max-width: 120px;
 }
 
 div[data-popper-placement] .reblog-button__item button:disabled {
